# windows-wsl-docker-bridge-example

./: .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yml  echo.py
.github/workflows/: test.yml
src/: main.rs
