[package]
name = "testproj"
version = "0.0.3"
edition = "2021"
description = "WinDivert library test in Rust"
authors = ["Alexander Sergeev <alexander.sergeev@onmail.com>"]

[dependencies]
env_logger = "^0.11.5"
log = "^0.4.22"
socket2 = "^0.5.9"
tokio = { version = "^1.45.0", features = ["full"] }
windivert = "^0.6.0"
